--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 img{
+    padding: 16px;
+    text-align: center;
         max-width: 100%;
     }
     @media (min-width: 600px) {
