--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,7 @@ img{
         }
         main{
             display: flex;
+            justify-content: center;
+            gap: 10px;/*3%*
         }
     }
