--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
-img{
+img{ul{
         max-width: 100%;
-    display: flex;
+        display: flex;
             justify-content: space-around;
             align-items: center;
+     }
         @media (min-width: 600px) {
             h1{
             font-size: 4rem;
