--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 img{max-width: 100%;
     display: flex;
-    ul{
+    ul{display: flex;
             justify-content: space-around;
             align-items: center;
      }
