--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@ img{max-width: 100%;
     text-align: center;
   
     ul{display: flex;
-        justify-content: center;
+         justify-content: center;
             justify-content: space-around;
+            height: 100vh;
      }
 }
  @media (min-width: 600px) {
