--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 @charset "utf-8";
-img{max-width: 100%;
+.photo-row{
     display: flex;
-    text-align: center;
-  
-    
-    
+    align-items: center;
     justify-content: space-around;
-        
-     
+}     
+ .photo-row img{max-width: 100%;
+                height: auto;    
 }
  @media (min-width: 600px) {
             h1{
