--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 @charset "utf-8";
-.photo-row{
+.img{
+    max-width: 100%;
+    text-align: center;
+}
+.img-sub{
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-}     
- .photo-row img{max-width: 100%;
-                height: auto;    
+    text-align: center;
+    justify-content: space-around;   
+}
+.img-sub img{ 
+    max-width: 100%;
+    height: auto;
 }
  @media (min-width: 600px) {
             h1{
