--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@
     max-width: 100%;
     height: auto;
 }
+
+.img-sub2{
+    display: flex;
+    justify-content: center;  
+    gap: 16px;
+}
+.img-sub2 img{ 
+    max-width: 100%;
+    height: auto;
+}
  @media (min-width: 600px) {
             h1{
             font-size: 4rem;
