--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
 
 .img-sub{
     display: flex;
-    justify-content: center;  
+    justify-content: center; 
+    gap: 16px;
+    margin: 0 auto; 
     width: 100%;
 }
 .img-sub img{ 
