--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,27 @@
 @charset "utf-8";
+body{
+    background: linear-gradient(to bottom, #f8fce9, #fff3e4);
+}
+
 .section{
     display: flex;
     justify-content: center;
     width: 100%;
     position: relative;
+    color: snow;
 }
 .section img{
     max-width: 100%;
     height: auto;
 }
-.section h1{
+.section h3{
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 0;
     margin: 0;
+  font-family: "Racing Sans One", sans-serif;
 }
 .section p{
     position: absolute;
@@ -24,6 +30,29 @@
     transform: translate(-50%,-50%);
     padding: 0;
     margin: 0;
+  font-family: "Racing Sans One", sans-serif;
+}
+
+.Day{
+    font-family: "Racing Sans One", sans-serif;
+    color: rgb(55, 32, 17);
+}
+
+.sentence{
+  font-family: "Kosugi Maru", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+  color: rgb(55, 32, 17);
+}
+.sentence2{
+  font-family: "Racing Sans One", sans-serif;
+  font-weight: 400;
+  color: rgb(55, 32, 17);
+}
+.caption{
+  font-family: "Kosugi Maru", sans-serif;
+  font-weight: 400;
+  color: rgb(55, 32, 17);
 }
 
 .img1{
